; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ixgbe/extr_if_ix.c_ixgbe_set_ivar.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ixgbe/extr_if_ix.c_ixgbe_set_ivar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { %struct.ixgbe_hw }
%struct.ixgbe_hw = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@IXGBE_IVAR_ALLOC_VAL = common dso_local global i32 0, align 4
@IXGBE_IVAR_OTHER_CAUSES_INDEX = common dso_local global i32 0, align 4
@IXGBE_IVAR_MISC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*, i32, i32, i32)* @ixgbe_set_ivar to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ixgbe_set_ivar(%struct.adapter* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.adapter*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.ixgbe_hw*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %12 = load %struct.adapter*, %struct.adapter** %5, align 8
  %13 = getelementptr inbounds %struct.adapter, %struct.adapter* %12, i32 0, i32 0
  store %struct.ixgbe_hw* %13, %struct.ixgbe_hw** %9, align 8
  %14 = load i32, i32* @IXGBE_IVAR_ALLOC_VAL, align 4
  %15 = load i32, i32* %7, align 4
  %16 = or i32 %15, %14
  store i32 %16, i32* %7, align 4
  %17 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %18 = getelementptr inbounds %struct.ixgbe_hw, %struct.ixgbe_hw* %17, i32 0, i32 0
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  switch i32 %20, label %112 [
    i32 133, label %21
    i32 132, label %59
    i32 131, label %59
    i32 130, label %59
    i32 128, label %59
    i32 129, label %59
  ]

21:                                               ; preds = %4
  %22 = load i32, i32* %8, align 4
  %23 = icmp eq i32 %22, -1
  br i1 %23, label %24, label %26

24:                                               ; preds = %21
  %25 = load i32, i32* @IXGBE_IVAR_OTHER_CAUSES_INDEX, align 4
  store i32 %25, i32* %6, align 4
  br label %31

26:                                               ; preds = %21
  %27 = load i32, i32* %8, align 4
  %28 = mul nsw i32 %27, 64
  %29 = load i32, i32* %6, align 4
  %30 = add nsw i32 %29, %28
  store i32 %30, i32* %6, align 4
  br label %31

31:                                               ; preds = %26, %24
  %32 = load i32, i32* %6, align 4
  %33 = ashr i32 %32, 2
  %34 = and i32 %33, 31
  store i32 %34, i32* %11, align 4
  %35 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %36 = load i32, i32* %11, align 4
  %37 = call i32 @IXGBE_IVAR(i32 %36)
  %38 = call i32 @IXGBE_READ_REG(%struct.ixgbe_hw* %35, i32 %37)
  store i32 %38, i32* %10, align 4
  %39 = load i32, i32* %6, align 4
  %40 = and i32 %39, 3
  %41 = mul nsw i32 8, %40
  %42 = shl i32 255, %41
  %43 = xor i32 %42, -1
  %44 = load i32, i32* %10, align 4
  %45 = and i32 %44, %43
  store i32 %45, i32* %10, align 4
  %46 = load i32, i32* %7, align 4
  %47 = load i32, i32* %6, align 4
  %48 = and i32 %47, 3
  %49 = mul nsw i32 8, %48
  %50 = shl i32 %46, %49
  %51 = load i32, i32* %10, align 4
  %52 = or i32 %51, %50
  store i32 %52, i32* %10, align 4
  %53 = load %struct.adapter*, %struct.adapter** %5, align 8
  %54 = getelementptr inbounds %struct.adapter, %struct.adapter* %53, i32 0, i32 0
  %55 = load i32, i32* %11, align 4
  %56 = call i32 @IXGBE_IVAR(i32 %55)
  %57 = load i32, i32* %10, align 4
  %58 = call i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw* %54, i32 %56, i32 %57)
  br label %113

59:                                               ; preds = %4, %4, %4, %4, %4
  %60 = load i32, i32* %8, align 4
  %61 = icmp eq i32 %60, -1
  br i1 %61, label %62, label %83

62:                                               ; preds = %59
  %63 = load i32, i32* %6, align 4
  %64 = and i32 %63, 1
  %65 = mul nsw i32 %64, 8
  store i32 %65, i32* %11, align 4
  %66 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %67 = load i32, i32* @IXGBE_IVAR_MISC, align 4
  %68 = call i32 @IXGBE_READ_REG(%struct.ixgbe_hw* %66, i32 %67)
  store i32 %68, i32* %10, align 4
  %69 = load i32, i32* %11, align 4
  %70 = shl i32 255, %69
  %71 = xor i32 %70, -1
  %72 = load i32, i32* %10, align 4
  %73 = and i32 %72, %71
  store i32 %73, i32* %10, align 4
  %74 = load i32, i32* %7, align 4
  %75 = load i32, i32* %11, align 4
  %76 = shl i32 %74, %75
  %77 = load i32, i32* %10, align 4
  %78 = or i32 %77, %76
  store i32 %78, i32* %10, align 4
  %79 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %80 = load i32, i32* @IXGBE_IVAR_MISC, align 4
  %81 = load i32, i32* %10, align 4
  %82 = call i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw* %79, i32 %80, i32 %81)
  br label %111

83:                                               ; preds = %59
  %84 = load i32, i32* %6, align 4
  %85 = and i32 %84, 1
  %86 = mul nsw i32 16, %85
  %87 = load i32, i32* %8, align 4
  %88 = mul nsw i32 8, %87
  %89 = add nsw i32 %86, %88
  store i32 %89, i32* %11, align 4
  %90 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %91 = load i32, i32* %6, align 4
  %92 = ashr i32 %91, 1
  %93 = call i32 @IXGBE_IVAR(i32 %92)
  %94 = call i32 @IXGBE_READ_REG(%struct.ixgbe_hw* %90, i32 %93)
  store i32 %94, i32* %10, align 4
  %95 = load i32, i32* %11, align 4
  %96 = shl i32 255, %95
  %97 = xor i32 %96, -1
  %98 = load i32, i32* %10, align 4
  %99 = and i32 %98, %97
  store i32 %99, i32* %10, align 4
  %100 = load i32, i32* %7, align 4
  %101 = load i32, i32* %11, align 4
  %102 = shl i32 %100, %101
  %103 = load i32, i32* %10, align 4
  %104 = or i32 %103, %102
  store i32 %104, i32* %10, align 4
  %105 = load %struct.ixgbe_hw*, %struct.ixgbe_hw** %9, align 8
  %106 = load i32, i32* %6, align 4
  %107 = ashr i32 %106, 1
  %108 = call i32 @IXGBE_IVAR(i32 %107)
  %109 = load i32, i32* %10, align 4
  %110 = call i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw* %105, i32 %108, i32 %109)
  br label %111

111:                                              ; preds = %83, %62
  br label %112

112:                                              ; preds = %4, %111
  br label %113

113:                                              ; preds = %112, %31
  ret void
}

declare dso_local i32 @IXGBE_READ_REG(%struct.ixgbe_hw*, i32) #1

declare dso_local i32 @IXGBE_IVAR(i32) #1

declare dso_local i32 @IXGBE_WRITE_REG(%struct.ixgbe_hw*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
